Bug 155186 - CRASH: Inserting tables and switching slides (gtk3)
Summary: CRASH: Inserting tables and switching slides (gtk3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Crash-Report
  Show dependency treegraph
 
Reported: 2023-05-08 12:07 UTC by Xisco Faulí
Modified: 2023-05-09 00:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
how to reproduce the issue (5.76 MB, video/mp4)
2023-05-08 13:33 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-05-08 12:07:07 UTC
Steps to reproduce:
1. Open Impress
2. Create a new slide
3. Insert a table
4. Change the table design from the sidebar
5. Create a new slide
6. Insert a table
7. Change the table design from the sidebar
8. Click on slide 1

-> Crash. Sometimes it even crashes before, while inseting the table or changing the table design

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8cd29dac4046e38bcf14784accab94ad1b4ac4d7
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-05-08 12:08:00 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2023-05-04 10:06:14 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-05-04 13:56:46 +0200
commit 3b7db802731826b6cc3b55100470b0c61c1f2dfa (patch)
tree 8b972dd3697e88a1d306626f28a177366b8de27a
parent fd02cdd4b5ef0fc96225501ba8f6758af8b6c69e (diff)
tdf#105404 [API CHANGE] add index to accessiblity change event

Bisected with: bibisect-linux64-7.6

Adding Cc: to Noel Grandin
Comment 2 Noel Grandin 2023-05-08 13:00:41 UTC
I can't replicate this, I think I already fixed it with
    commit 2361718a34ee4ef47901846cb35eea4552bca46b
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Fri May 5 12:11:34 2023 +0200
    tdf#155149 Crash when exiting cell edit mode
Comment 3 Xisco Faulí 2023-05-08 13:33:42 UTC
Created attachment 187145 [details]
how to reproduce the issue
Comment 4 Xisco Faulí 2023-05-08 13:34:32 UTC
Hi Noel,
I attached a screencast showing how to reproduce the issue. The version used contains the your fix mentioned in comment 2
Comment 5 Noel Grandin 2023-05-08 14:04:55 UTC
Aaha! thanks for that, fix is https://gerrit.libreoffice.org/c/core/+/151536
Comment 6 Commit Notification 2023-05-09 00:03:34 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e4f5c7e3bf9a791ce777d1027aa17c93ad8f28a3

tdf#155186 crash Inserting tables and switching slides (gtk3)

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.