tdf#155186 crash Inserting tables and switching slides (gtk3)

regression from

    commit 3b7db802731826b6cc3b55100470b0c61c1f2dfa
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu May 4 10:06:14 2023 +0200
    tdf#105404 [API CHANGE] add index to accessiblity change event

where something is forgetting to send events for some of the changes, so
just ignore a bad indexhint here

Change-Id: I9228b480be10b2f267c2a76cb30a9faf1476639e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151536
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>